# fiends_and_fortune

./: .codecov.yml  .gitignore  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  api_conventions.md  check
.builds/: debian_stable.yml  freebsd_latest.yml  openbsd_latest.yml
FiendsAndFortune.xcodeproj/: project.pbxproj
UnitTests/: DiceTest.c  dice_test.c  die_roll_test.c  main.c  str_test.c
docs/: FiendsAndFortune.1  dungeon_structs.md  (+7 more)
libs/astr/: .gitignore  CMakeLists.txt  LICENSE  README.md  astr.3  astr.c  astr.h  astr_ndebug_tests.c  astr_tests.c
libs/astr/.builds/: debian_stable.yml  freebsd_latest.yml  openbsd_latest.yml
libs/xmalloc/: CMakeLists.txt  LICENSE  README.md  TODO.md  xlibgen.c  xlibgen.h  xlibgen_tests.c  xmalloc.c  xmalloc.h  xmalloc_tests.c  xstdio.c  xstdio.h  xstdio_tests.c  xstring.c  xstring.h  xstring_ndebug_tests.c  xstring_tests.c  xunistd.c  xunistd.h  xunistd_tests.c
libs/xmalloc/.builds/: debian_stable.yml  freebsd_latest.yml  openbsd_latest.yml
src/background/: CMakeLists.txt  background.h  background_tests.c  direction.c  direction.h  direction_test.c  language.c  language.h  language_test.c  money.c  money.h  money_test.c  orientation.c  orientation.h  orientation_test.c
src/base/: CMakeLists.txt  alloc_or_die.c  alloc_or_die.h  alloc_or_die_test.c  array.h  base.h  base_tests.c  fail.c  fail.h  int.c  int.h  int_test.c  ptr_array.c  ptr_array.h  ptr_array_test.c  reallocarray.c  reallocarray.h  reallocarray_test.c  result.c  result.h  result_test.c  result_type.h  rnd.c  rnd.h  rnd_test.c  sort.c  sort.h  sort_test.c  str.c  str.h  str_test.c  unreachable.c  unreachable.h  xbasename.c  xbasename.h  xbasename_test.c  xlibgen.c  xlibgen_test.c  xmalloc.c  xmalloc.h  (+7 more)
src/character/: CMakeLists.txt  abilities.c  abilities.h  abilities_test.c  ability_flag.h  ability_score_generation_method.c  ability_score_generation_method.h  ability_score_generation_method_test.c  ability_score_generation_type.h  ability_scores.c  ability_scores.h  ability_scores_test.c  ability_sets.c  ability_sets.h  ability_sets_test.c  character.c  character.h  character_tests.c  characteristic_flag.h  characteristic_generation_method.c  characteristic_generation_method.h  characteristic_generation_method_test.c  characteristic_rolls.c  characteristic_rolls.h  characteristic_rolls_test.c  characteristic_scores.c  characteristic_scores.h  characteristic_scores_test.c  characteristics.c  characteristics.h  characteristics_sets.c  characteristics_sets.h  characteristics_sets_test.c  characteristics_test.c  language.c  language.h  method.c  method.h  method_test.c  spell.c  (+1 more)
src/dungeon/: CMakeLists.txt  area.c  area.h  area_features.h  area_test.c  area_type.h  areas.c  areas.h  box.c  box.h  box_test.c  digger.c  digger.h  digger_test.c  direction.c  direction.h  direction_test.c  dungeon.c  dungeon.h  dungeon_generator.c  dungeon_generator.h  dungeon_options.c  dungeon_options.h  dungeon_test.c  dungeon_tests.c  exit.c  exit.h  generator.c  generator.h  generator_test.c  level_map.c  level_map.h  level_map_test.c  orientation.c  orientation.h  orientation_test.c  periodic_check.c  periodic_check.h  point.c  point.h  (+26 more)
src/fiends/: CMakeLists.txt  about_box.cpp  about_box.hpp  about_dialog.cpp  about_dialog.hpp  alloc_ptr.hpp  application.cpp  application.hpp  commands.hpp  desk_top.cpp  desk_top.hpp  fiends.hpp  fiends_app.cpp  fiends_app.h  fiends_app.hpp  fiends_tests.cpp  game.c  game.h  generate_treasure_dialog.cpp  generate_treasure_dialog.hpp  main.c  main.cpp  menu_bar.cpp  menu_bar.hpp  ptr.hpp  selection.c  selection.h  status_line.hpp  text_rect.cpp  text_rect.hpp  treasure_table_view.cpp  treasure_table_view.hpp  treasure_table_window.cpp  treasure_table_window.hpp  treasure_types_table_view.cpp  treasure_types_table_view.hpp  treasure_types_table_window.cpp  treasure_types_table_window.hpp  treasure_view.cpp  treasure_view.hpp  (+3 more)
src/fiends/about/: about.cpp  about.hpp  about_dialog.cpp  about_dialog.hpp
src/fiends/application/: application.cpp  application.hpp  commands.hpp  desk_top.hpp  menu_bar.cpp  menu_bar.hpp  status_line.cpp  status_line.hpp
src/fiends/generate_dungeon/: dungeon_window.cpp  dungeon_window.hpp  generate_dungeon.cpp  generate_dungeon.hpp
src/fiends/generate_magic_items/: generate_magic_items.cpp  generate_magic_items.hpp  generate_magic_items_dialog.cpp  generate_magic_items_dialog.hpp  magic_items_window.cpp  magic_items_window.hpp
src/fiends/generate_treasure/: generate_treasure.cpp  generate_treasure.hpp  generate_treasure_dialog.cpp  generate_treasure_dialog.hpp  treasure_view.cpp  treasure_view.hpp  treasure_window.cpp  treasure_window.hpp
src/fiends/treasure_types_table/: treasure_types_table.cpp  treasure_types_table.hpp  treasure_types_table_view.cpp  treasure_types_table_view.hpp  treasure_types_table_window.cpp  treasure_types_table_window.hpp
src/fiends/util/: ptr.hpp  text_rect.cpp  text_rect.hpp  window_numbers.cpp  window_numbers.hpp
src/fiends/views/: text_rect_view.cpp  text_rect_view.hpp
src/fnf/: CMakeLists.txt  action.c  action.h  action_test.c  check  check.out  fnf_tests.c  main.c  options.c  options.h  options_test.c
src/json/: CMakeLists.txt  json.c  json.h  json_tests.c
src/magic/: CMakeLists.txt  magic.h  magic_tests.c  spell.c  spell.h  spell_test.c
src/mechanics/: CMakeLists.txt  dice.c  dice.h  dice_test.c  mechanics.h  mechanics_tests.c  xdice.c  xdice.h  xdice_test.c
src/treasure/: CMakeLists.txt  coins.c  coins.h  coins_test.c  gem.c  gem.h  gem_test.c  jewelry.c  jewelry.h  jewelry_test.c  magic_item.c  magic_item.h  magic_item_test.c  treasure.c  treasure.h  treasure_map.c  treasure_map.h  treasure_map_test.c  treasure_struct.h  treasure_test.c  treasure_tests.c  treasure_type.c  treasure_type.h  treasure_type_test.c
src/tui/: CMakeLists.txt  app.c  app.h  desktop.c  desktop.h  menu_view.c  menu_view.h  rect.c  rect.h  screen.c  screen.h  screen_view.c  screen_view.h  tui.h  tui_example.c  view.c  view.h  window.c  window.h
(+145 files in other folders)
